--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,67 +3,29 @@
 body{   
     background-color: white;
     margin: 0;
-
-}
-nav{ 
-    display: flex;
-    flex-direction: row;
-    align-content: space-between;
-
-    text-align: center;
-    align-items: center;
-    
-    padding: 20px;
-    margin: 0;
-    width: auto;
-    height: auto;
-    
-    margin-left: auto;
-	margin-right: auto; 
-
-    block-size: auto;
-    background-color: rgba(69, 64, 64, 0.986);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 p{
     color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-family: 'Courier New', Courier, monospace;
 
     font-size: 22px;
-    font-style: none;
-
-    text-align: center;
-}
-
-h1{
-    font-size: 40px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
-    color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
-    padding-top: 40px;
-
     text-align: center;
 }
 
 nav{
     display: flex;
     justify-content: space-between;
-    padding: 20px 30px 20px 30px;
-}
-
-.links{
-    display: flex;
-    flex-direction: row;
-    
-    flex: 1 1 auto;
-    justify-content: space-around;
+    padding: 10px;
+    align-items: center;
+    background-color: rgba(69, 64, 64, 0.986);
 }
 
 .searchBox{
     display: flex;
     height: auto;
+    justify-content: flex-end;
+    width: 20%;
 }
 
 .search{
@@ -73,20 +35,24 @@ nav{
     text-align: center;
 
     border-radius: 5px;
-    background-color: rgb(73, 70, 70);
-    height: 45px;
+    color: black;
+    background-color: rgb(222, 216, 216);
+    padding: 6%;
+    width: 35%;
+    transition: 0.3s;
 }
-.search:hover{
+.search:focus{
     color: rgb(73, 70, 70);
     background-color: white;
-    transition: 0.1s;
+    
+    width: 100%;
 }
 
 .logo{
     display: flex;
     flex-direction: row;
     flex: 0 1 auto;
-    justify-content: flex-start;
+    width: 20%;
 }
 
 .top{
@@ -98,24 +64,27 @@ nav{
     text-align: center;
 }
 
+.links{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex: 0 1 40%;
+}
+
 .link {
-  border-radius: 15px; 
-  padding: 15px 30px;
-  
-  height: fit-content;
+    border-radius: 15px; 
+    padding: 10px 30px;
 
-  position: relative;
-  display: inline-block;
-  background-color: rgb(222, 216, 216);
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.719);
-  
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: relative;
+    display: inline-block;
+    background-color: rgb(222, 216, 216);
 
-  transition: all 1s ease;
-    transform: scale(1);  
+    transition: all 1s ease;
+    transform: scale(1);
 }
 
 .link:hover {
+    transition: 0.3s;
     transform: scale(1.1) perspective(1px)
 }
 
@@ -134,18 +103,7 @@ nav{
     background: rgb(0, 0, 0);
     transition: transform 0.2s ease-in-out;
     transform: scale(0);
-    
 }
 .block:hover::after{
     transform: scale(1);
-}
-
-.selected::after{
-    content: "";
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 2px;;
-    background: rgb(0, 0, 0);
-    transform: scale(1.5);
 }
