--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,17 +1,9 @@
 
 
-body{
-	font-family: 'Roboto', sans-serif;
-	font-weight: 500;
-	font-size: 15px;
-	line-height: 1.4;
-	color: #fff;
-	background-color: #1f2029;
-
-    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
-    background-position: center;
-    background-repeat: repeat;
-    background-size: 4%;
+body{   
+    background-color: white;
+    margin: 0;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 p{
@@ -23,24 +15,17 @@ p{
 
 nav{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 10px;
     align-items: center;
     background-color: rgba(69, 64, 64, 0.986);
 }
 
-.more{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    
-    flex: 0 1 15%;
-}
 .searchBox{
     display: flex;
-    height: 50px;
+    height: auto;
     justify-content: flex-end;
-    width: auto;
+    width: 20%;
 }
 
 .search{
@@ -48,16 +33,15 @@ nav{
     font-size: 20px;
     text-decoration: solid;
     text-align: center;
-    outline: none;
 
-    border-radius: 20px;
+    border-radius: 5px;
     color: black;
     background-color: rgb(222, 216, 216);
     padding: 6%;
     width: 35%;
     transition: 0.3s;
 }
-.search:hover{
+.search:focus{
     color: rgb(73, 70, 70);
     background-color: white;
     
@@ -84,7 +68,7 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    flex: 0 1 20%;
+    flex: 0 1 40%;
 }
 
 .link {
@@ -99,7 +83,10 @@ nav{
     transform: scale(1);
 }
 
-
+.link:hover {
+    transition: 0.3s;
+    transform: scale(1.1) perspective(1px)
+}
 
 .link:active {
   transform: translate(0px, 5px);
@@ -120,5 +107,3 @@ nav{
 .block:hover::after{
     transform: scale(1);
 }
-
-
