--- a/CSS/main.css
+++ b/CSS/main.css
@@ -50,7 +50,7 @@ nav{
     text-align: center;
     outline: none;
 
-    border-radius: 20px;
+    border-radius: 15px;
     color: black;
     background-color: rgb(222, 216, 216);
     padding: 6%;
@@ -68,7 +68,8 @@ nav{
     display: flex;
     flex-direction: row;
     flex: 0 1 auto;
-    width: 20%;
+    width: 21%;
+    align-self: center;
 }
 
 .top{
@@ -84,7 +85,7 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    flex: 0 1 20%;
+    flex: 0 1 30%;
 }
 
 .link {
