--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -52,7 +52,7 @@
   margin: 0;
   padding: 80px 0;
   list-style: none;
-  background-color: #dddcdc;
+  background-color: rgb(222, 216, 216);
   box-shadow: 2px 2px 6px rgb(0, 0, 0);
   transition-duration: .30s;
 }
