--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,128 +1,85 @@
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 1.4;
+  color: #fff;
+  background-color: #1f2029;
 
-
-body{
-	font-family: 'Roboto', sans-serif;
-	font-weight: 500;
-	font-size: 15px;
-	line-height: 1.4;
-	color: #fff;
-	background-color: #1f2029;
-
-    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
-    background-position: center;
-    background-repeat: repeat;
-    background-size: 4%;
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: 4%;
 }
 
-p{
-    color: rgb(255, 255, 255);
+p {
+  color: rgb(255, 255, 255);
 
-    font-size: 22px;
-    text-align: center;
+  font-size: 22px;
+  text-align: center;
 }
 
-nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-    background-color: rgba(69, 64, 64, 0.986);
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: rgba(69, 64, 64, 0.986);
 }
 
-.more{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: center;
-    margin-right: 20px; /* ist für das burger menu*/
-    flex: 0 1 21%;
+.more {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  margin-right: 20px; /* ist für das burger menu*/
+  flex: 0 1 21%;
 }
-.searchBox{
-    display: flex;
-    height: 50px;
-    justify-content: flex-end;
-    width: auto;
-}
-
-.search{
-    display: flex;
-    font-size: 20px;
-    text-decoration: solid;
-    text-align: center;
-    outline: none;
-
-    border-radius: 15px;
-    color: black;
-    background-color: rgb(222, 216, 216);
-    padding: 6%;
-    width: 35%;
-    transition: 0.3s;
-}
-.search:hover{
-    color: rgb(73, 70, 70);
-    background-color: white;
-    box-shadow: 0 0 30px 5px #cfb41d2d;
-    width: 100%;
+.searchBox {
+  display: flex;
+  height: 50px;
+  justify-content: flex-end;
+  width: auto;
 }
 
-.logo{
-    display: flex;
-    flex-direction: row;
-    flex: 0 1 auto;
-    width: 21%;
-    align-self: center;
+.search {
+  display: flex;
+  font-size: 20px;
+  text-decoration: solid;
+  text-align: center;
+  outline: none;
+
+  border-radius: 15px;
+  color: black;
+  background-color: rgb(222, 216, 216);
+  padding: 6%;
+  width: 35%;
+  transition: 0.3s;
+}
+.search:hover {
+  color: rgb(73, 70, 70);
+  background-color: white;
+  box-shadow: 0 0 30px 5px #cfb41d2d;
+  width: 100%;
 }
 
-.top{
-	color: rgb(0, 0, 0);
-	text-decoration: none;
-
-    font-size: 22px;
-    font-style: none;
-    text-align: center;
+.logo {
+  display: flex;
+  flex-direction: row;
+  flex: 0 1 auto;
+  width: 21%;
+  align-self: center;
 }
 
-.links{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex: 0 1 30%;
+.top {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+
+  font-size: 22px;
+  font-style: none;
+  text-align: center;
 }
 
-.link {
-    border-radius: 15px; 
-    padding: 10px 30px;
-
-    position: relative;
-    display: inline-block;
-    background-color: rgb(222, 216, 216);
-
-    transition: all 1s ease;
-    transform: scale(1);
-}
-
-
-
-.link:active {
-  transform: translate(0px, 5px);
-  box-shadow: 0px 1px 0px 0px;
-}
-
-
-.block::after{
-    content: "";
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 2px;
-    background: rgb(0, 0, 0);
-    transition: transform 0.2s ease-in-out;
-    transform: scale(0);
-}
-.block:hover::after{
-    transform: scale(1);
-}
-
-.burger{
-    display: flex;
-    margin-top: 24px; /* für das burger menu */
+.burger {
+  display: flex;
+  margin-top: 24px; /* für das burger menu */
 }
