--- a/CSS/links-sublinks.css
+++ b/CSS/links-sublinks.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  flex: 0 1 30%;
+  flex: 0 1 38%;
 }
 
 .link {
@@ -63,7 +63,7 @@
   position: fixed;
   top: -200%;
   width: 100%;
-  height: 20%;
+  height: 180px;
   margin-top: 0;
   padding: 80px 10px;
   list-style: none;
@@ -78,7 +78,7 @@
   position: fixed;
   top: -200%;
   width: 100%;
-  height: 20%;
+  height: 180px;
   margin-top: 0;
   padding: 80px 10px;
   list-style: none;
@@ -93,7 +93,7 @@
   position: fixed;
   top: -200%;
   width: 100%;
-  height: 20%;
+  height: 180px;
   margin-top: 0;
   padding: 80px 10px;
   list-style: none;
