--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,7 +3,7 @@ body {
   font-weight: 500;
   font-size: 15px;
   line-height: 1.4;
-  color: #fff;
+  color: white;
   background-color: #1f2029;
 
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg");
@@ -57,8 +57,7 @@ nav {
 }
 .search:hover {
   color: rgb(73, 70, 70);
-  background-color: white;
-  box-shadow: 0 0 30px 5px #cfb41d2d;
+  background-color: rgb(222, 216, 216);
   width: 100%;
 }
 
@@ -68,10 +67,11 @@ nav {
   flex: 0 1 auto;
   width: 21%;
   align-self: center;
+  margin-left: 20px; /* ist für das burger menu*/
 }
 
 .top {
-  color: rgb(0, 0, 0);
+  color: #11185a;
   text-decoration: none;
 
   font-size: 22px;
