--- a/CSS/links-sublinks.css
+++ b/CSS/links-sublinks.css
@@ -10,7 +10,7 @@
   padding: 10px 30px;
   position: relative;
   display: inline-block;
-  background-color: rgb(222, 216, 216);
+  background-color: white;
 
   transition: all 1s ease;
   transform: scale(1);
@@ -19,10 +19,6 @@
 
 .link:active {
   transform: translate(0px, 5px);
-}
-
-.link:hover {
-  transform: scale(1.05);
 }
 
 #phones {
@@ -65,10 +61,11 @@
   top: -200%;
   width: 100%;
   height: 180px;
-  margin-top: 0;
+  margin: 0;
+  margin-left: 20px; /* damit kein abstand zwischen hover bei sublink ist*/
   padding: 80px 10px;
   list-style: none;
-  background-color: rgb(222, 216, 216);
+  background-color: white;
   box-shadow: 2px 2px 6px rgb(0, 0, 0);
   transition-duration: 0.4s;
   z-index: -1;
@@ -80,10 +77,11 @@
   top: -200%;
   width: 100%;
   height: 180px;
-  margin-top: 0;
+  margin: 0;
+  margin-left: 20px;
   padding: 80px 10px;
   list-style: none;
-  background-color: rgb(222, 216, 216);
+  background-color: white;
   box-shadow: 2px 2px 6px rgb(0, 0, 0);
   transition-duration: 0.4s;
   z-index: -1;
@@ -95,10 +93,11 @@
   top: -200%;
   width: 100%;
   height: 180px;
-  margin-top: 0;
+  margin: 0;
+  margin-left: 20px;
   padding: 80px 10px;
   list-style: none;
-  background-color: rgb(222, 216, 216);
+  background-color: white;
   box-shadow: 2px 2px 6px rgb(0, 0, 0);
   transition-duration: 0.4s;
   z-index: -1;
