--- a/CSS/main.css
+++ b/CSS/main.css
@@ -4,12 +4,14 @@ body {
   font-size: 15px;
   line-height: 1.4;
   color: white;
+  
   background-color: #1f2029;
-
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg");
   background-position: center;
   background-repeat: repeat;
   background-size: 4%;
+
+  overflow-x: hidden;
 }
 
 p {
@@ -23,9 +25,16 @@ nav {
   display: flex;
   justify-content: space-between;
   padding: 10px 20px;
-  background-color: rgba(69, 64, 64, 0.986);
+  background-color:  #3a3a3a;
+  border-radius: 5px;
 }
 
+h1{
+  text-align: center;
+}
+p{
+  padding: 10px 50px;
+}
 .more {
   display: flex;
   flex-direction: row;
@@ -44,21 +53,27 @@ nav {
 .search {
   display: flex;
   font-size: 20px;
-  text-decoration: solid;
+  text-decoration: none;
   text-align: center;
   outline: none;
-
+  background-color: white;
   border-radius: 15px;
-  color: black;
-  background-color: rgb(222, 216, 216);
   padding: 6%;
   width: 35%;
   transition: 0.3s;
+  border-style: none;
+  height: 28px;
 }
-.search:hover {
-  color: rgb(73, 70, 70);
-  background-color: rgb(222, 216, 216);
+.search:hover::placeholder {
+  opacity: 70%;
   width: 100%;
+}
+.search:hover{
+  width: 100%;
+}
+.search::placeholder{
+  opacity: 100%;
+  color: black;
 }
 
 .logo {
@@ -67,11 +82,10 @@ nav {
   flex: 0 1 auto;
   width: 21%;
   align-self: center;
-  margin-left: 20px; /* ist für das burger menu*/
 }
 
 .top {
-  color: #11185a;
+  color: black;
   text-decoration: none;
 
   font-size: 22px;
@@ -82,8 +96,4 @@ nav {
 .burger {
   display: flex;
   margin-top: 24px; /* für das burger menu */
-}
-
-.account{
-  border-radius: 100%;
 }
