--- a/CSS/main.css
+++ b/CSS/main.css
@@ -16,7 +16,6 @@ body {
 
 p {
   color: rgb(255, 255, 255);
-
   font-size: 22px;
   text-align: center;
 }
@@ -96,4 +95,8 @@ p{
 .burger {
   display: flex;
   margin-top: 24px; /* für das burger menu */
+}
+
+.fa-solid{
+  margin-left: 10px;
 }
