--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -4,6 +4,7 @@
 #menu__toggle:checked + .menu__btn > span {
   background-color: black;
   transform: rotate(45deg);
+  position: fixed;
 }
 #menu__toggle:checked + .menu__btn > span::before {
   background-color: black;
@@ -57,6 +58,7 @@
   list-style: none;
   background-color: white;
 
+  position: fixed;
   box-shadow: 2px 2px 6px rgb(0, 0, 0);
   transition-duration: .30s;
 }
