--- a/CSS/shoppingCart.css
+++ b/CSS/shoppingCart.css
@@ -15,6 +15,9 @@ h2{
     flex: 4 1 auto;
 }
 .checkout{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     border-style: solid;
     flex: 1 1 auto;
 }
@@ -22,10 +25,9 @@ h2{
 .box{
     display: flex;
     flex-direction: column;
-}
-
-.thick{
-    font-weight: bold;
+    width: 80%;
+    align-self: center;
+    z-index: -2;
 }
 
 .checkoutButton{
@@ -34,15 +36,24 @@ h2{
     position: relative;
     display: inline-block;
     background-color: white;
-  
     transition: all 1s ease;
     transform: scale(1);
     size: 100px;
     width: fit-content;
     align-self: center;
-    align-self: flex-end;
   }
   
   .checkoutButton:hover{
     transform: translate(0px, 5px);
+  }
+  .item{
+    padding-top: 1px;
+
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(255, 255, 255);
+
+    display: flex;
+    align-content: center;
+
   }
