--- a/CSS/shoppingCart.css
+++ b/CSS/shoppingCart.css
@@ -1,35 +1,35 @@
+html, body {
+    height: 100%; /* macht das es den ganzen vertikalen platz nutzt, ist wichtig!*/
+}
 h2{
     text-align: center;
-}
-
-.itemHolder{
-    display:flex;
-    flex-direction: row; 
-    justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.144);
-}
-.items{
-    display: flex;
-    border-style: solid;
-    flex-direction: column;
-    flex: 4 1 auto;
-}
-.checkout{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border-style: solid;
-    flex: 1 1 auto;
 }
 
 .box{
     display: flex;
     flex-direction: column;
-    width: 80%;
-    align-self: center;
     z-index: -2;
+    flex: 1 0 auto;
 }
 
+.itemHolder{
+    display:flex;
+    width: 100%;
+    flex: 1 0 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.144);
+}
+
+.checkout{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #282634;
+    flex: 2 0 auto;
+    margin: 10px 0px 0px 10px;
+    border-radius: 5px;
+}
 .checkoutButton{
     border-radius: 15px;
     padding: 10px 30px;
@@ -41,19 +41,46 @@ h2{
     size: 100px;
     width: fit-content;
     align-self: center;
-  }
+}
   
-  .checkoutButton:hover{
+.checkoutButton:hover {
     transform: translate(0px, 5px);
-  }
-  .item{
-    padding-top: 1px;
-
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(255, 255, 255);
-
+}
+.items p{
+    margin: 0px;
     display: flex;
+    padding: 0px;
+}
+.items{
+    display: flex;
+    flex-direction: column;
+    flex: 4 1 auto;
+    border-radius: 5px;
+    padding-top: 10px;
+}
+.item{
+    display: flex;
+    flex: 5 0 auto;
     align-content: center;
-
-  }
+    border-radius: 5px;
+    background-color: #201f2c;
+    margin-bottom: 10px;
+}
+.item:last-child{
+    margin-bottom: 0px;
+}
+.title{
+    flex: 0.6 0 auto;
+    height: 80px;
+    background-color: #282634;
+}
+.title h2{
+    display: flex;
+    font-size: 70px;
+    align-self: center;
+    margin: 0 0 0 3%;
+}
+.cartBanner{
+    flex: 0.75 0 auto;
+    background-color: #282634;
+}
