--- a/CSS/main.css
+++ b/CSS/main.css
@@ -206,3 +206,19 @@ p{
 html{
   scroll-behavior: smooth;
 }
+.things{
+  flex-wrap:wrap;
+  flex-direction: column;
+  display: flex;
+  align-content:space-between;
+  justify-content: center;
+}
+
+.thing1{
+  width:100%;
+  flex-wrap:wrap;
+  flex-direction:row;
+  display: flex;
+  align-content: space-between;
+  justify-content: space-between;
+}
