--- a/CSS/phones.css
+++ b/CSS/phones.css
@@ -2,7 +2,50 @@ html, body {
     height: 100%; /* macht das es den ganzen vertikalen Platz nutzt, ist wichtig!*/
     scroll-behavior: smooth;
 }
-/*.things{
+
+h2{
+    text-align: center;
+    margin: 0;
+}
+
+h3{
+    text-align: center;
+}
+
+.zIndexMask{
+    display: flex;
+    flex-direction: column;
+    z-index: -2;
+    flex: 1 0 auto;
+}
+.zIndexMask a{
+    color: white;
+    margin: 0 5px 0 5px;
+}
+.title{
+    flex: 0.6 0 auto;
+    height: 80px;
+    background-color: #282634;
+    text-align: center;
+    font-size: 60px;
+    width: 100%;
+}
+.title h2{
+    display: flex;
+    font-size: 70px;
+    align-self: center;
+    margin: 0 0 0 3%;
+}
+.itemHolder{
+    display:flex;
+    width: 100%;
+    flex: 1 0 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.144);
+}
+
+.things{
     flex-wrap:wrap;
     flex-direction: column;
     display: flex;
@@ -16,8 +59,118 @@ html, body {
     display: flex;
     align-content: space-between;
     justify-content: space-between;
-}*/
+}
 
+.items{
+    display: flex;
+    flex-direction: column;
+    flex: 4 1 auto;
+    border-radius: 5px;
+    padding-top: 10px;
+}
 .item{
+    display: flex;
+    flex: 5 0 auto;
+    align-content: center;
+    border-radius: 5px;
+    background-color: #201f2c;
+    margin-bottom: 10px;
+}
+.item:not(:first-child):not(:last-child){
+    padding: 10px 10px 10px 4px;
+    flex-direction: row;
+    justify-content: start;
+}
+.itemImage{
+    align-self: center;
+    height: 320px;
+    border-radius: 5px;
+    margin-left: 3%;
+}
+
+.information{
+    display: flex;
+    flex-direction: column;
+    margin-left: 1%;
+
+}
+.information p{
+    margin: 0;
+    font-size: 1em;
+}
+.itemHolder fieldset{
+    background-color: #201f2c;
+    width: fit-content;
+    padding: 0 2px 0 0;
+    border-radius: 5px;
+    margin-top: auto;
+    margin-bottom: 7px;
+}
+.itemHolder legend{
+    color: white;
+    font-size: 1em;
+}
+.itemHolder input[type="number"], input[type="text"]{
+    border: none;
+    background-color: #201f2c;
+    color: white;
+    padding: 0 8px 10px 10px;
+}
+.information h3{
+    margin: 0;
+    font-size: 1.5em;
+}
+.actions{
+    display: flex;
+    flex-direction: column;
+    margin: 0 3% 0 auto;
+    justify-content: space-between;
+}
+.actions h3{
+    margin-top: 3px;
+}
+.actions a{
+    margin-bottom: 4px;
+    color: #99989e;
+}
+
+.checkout{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
     background-color: #282634;
+    flex: 2 0 auto;
+    margin: 10px 0 0 10px;
+    border-radius: 5px;
+    padding: 10px 50px 10px 50px;
+}
+.orderSummery{
+    display: flex;
+    flex-direction: column;
+}
+.orderSummery h3{
+    margin: 0 0 20px 0;
+    font-size: 1.8em;
+}
+.checkout p{
+    display: flex;
+    margin: 0;
+    padding: 2.5px 0 2.5px 0;
+    font-size: 1.1em;
+    align-self: start;
+    width: 100%;
+}
+.checkout .summe{
+    display: flex;
+    margin-left: auto;
+}
+.checkout hr{
+    width: 100%;
+    margin: 30px 0 30px 0;
+}
+
+.all{
+    display: flex;
+    flex-direction: row;
 }
