--- a/CSS/main.css
+++ b/CSS/main.css
@@ -168,11 +168,14 @@ p{
   align-content: flex-end;
 }
 .aboutText{
+  margin-top: 30px;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   position: absolute; /*important to set to absolute for sublink to work*/
   z-index: -2;
-  padding: 20px 30px 0;
+  padding: 20px 30px 20px;
+  background-color: #282634;
 }
 
 .aboutText p{
