--- a/CSS/main.css
+++ b/CSS/main.css
@@ -103,6 +103,7 @@ p{
   background-color: #282634;
   border-radius: 10px;
   visibility: hidden;
+  display: none;
 }
 
 #list:hover{
@@ -137,14 +138,6 @@ p{
   background-color: #282634;
 }
 
-.logo {
-  display: flex;
-  flex-direction: row;
-  flex: 0 1 auto;
-  width: 21%;
-  align-self: center;
-}
-
 .top {
   color: black;
   text-decoration: none;
@@ -168,7 +161,7 @@ p{
   align-content: flex-end;
 }
 .aboutText{
-  margin-top: 30px;
+  margin: 10px 0 0 0;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -226,4 +219,28 @@ p{
 
 .button:hover{
   transform: translate(0px, 5px);
+}
+
+.logo {
+  display: flex;
+  flex-direction: row;
+  flex: 0 1 auto;
+  width: 21%;
+  align-self: center;
+  align-content: center;
+}
+
+.logo h1{
+  margin: 0 0 0 10px;
+  font-size: 2.4em;
+  color: white;
+  text-decoration: none;
+}
+
+.logo img{
+  align-self: center;
+}
+
+a{
+  text-decoration: none;
 }
