--- a/CSS/shoppingCart.css
+++ b/CSS/shoppingCart.css
@@ -109,6 +109,7 @@ h2{
 .actions a{
     margin-bottom: 4px;
     color: #99989e;
+    text-decoration: underline;
 }
 
 .checkout{
@@ -162,7 +163,6 @@ h2{
     align-self: end;
     margin-bottom: 7px;
     margin-left: auto;
-    padding: 0 25px 0 25px;
 }
 .checkoutButton{
     width: 100%;
@@ -176,24 +176,21 @@ h2{
 .checkoutButton:hover{
     color: white;
     background-color: #282634;
-    border: solid;
-    border-color: white;
+    border: solid white;
 }
 
 .applyButton{
-    border-width: 2px;
     width: 20%;
     margin: 0;
     font-size: 1.2em;
     transition: all 0.5s ease;
-    border: none;
+    border: 2px none;
     border-radius: 5px;
 }
 .applyButton:hover{
     color: white;
     background-color: #282634;
-    border: solid;
-    border-color: white;
+    border: solid white;
 }
 
 .legend{
